# f2viewer

./: CLAUDE.md  Cargo.toml  Makefile
src/: app.rs  image_loader.rs  main.rs  pane.rs  split_tree.rs
src/ui/: controls.rs  mod.rs  pane_ui.rs  tree_ui.rs
